--- a/src/scss/components/_calculator.scss
+++ b/src/scss/components/_calculator.scss
@@ -124,6 +124,7 @@
 }
 
 .popup--date {
+	width: 300px;
 	right: 0;
 }
 
@@ -169,7 +170,7 @@
 .popup__month-item--active {
 	padding-top: 10px;
 	padding-bottom: 10px;
-	color: rgb(252, 181, 0);
+	color: $_3;
 	font-size: 16px;
 	font-weight: 700;
 	line-height: 130%;
@@ -182,19 +183,22 @@
 	padding-left: 20px;
 }
 
-.popup__day-item {
+.popup__days-item {
 	color: rgb(48, 48, 48);
 	font-size: 14px;
 	font-weight: 700;
+	cursor: pointer;
 
-	&:hover {
-		color: $_3;
-	}
-
+	&:hover,
 	&:focus-visible {
-		color: $_3;
-		outline: 2px solid $_3;
+		outline: none;
+		font-size: 16px;
 	}
+}
+
+.popup__days-item--active {
+	color: $_3;
+	font-size: 16px;
 }
 
 .popup__button {
@@ -206,6 +210,8 @@
 // ! ПОПАП КОЛИЧЕСТВО ЛЮДЕЙ
 .popup--people {
 	right: 102px;
+	width: 50px;
+	height: 277px;
 }
 
 .popup__people-list {
@@ -218,6 +224,19 @@
 	font-size: 14px;
 	font-weight: 700;
 	line-height: 130%;
+	cursor: pointer;
+
+
+	&:hover,
+	&:focus-visible {
+		outline: none;
+		font-size: 16px;
+	}
+}
+
+.popup__days-item--active {
+	color: $_3;
+	font-size: 16px;
 }
 
 // ! ПОПАП ОПЦИЙ
@@ -239,6 +258,7 @@
 	font-weight: 700;
 	display: flex;
 	gap: 20px;
+	cursor: pointer;
 
 	&::before {
 		content: "";
@@ -248,5 +268,16 @@
 
 		border: 1px solid rgb(48, 48, 48);
 		background: rgb(255, 255, 255);
+	}
+
+
+	&:hover {
+		color: $_3;
+	}
+
+	&:focus-visible {
+		color: $_3;
+		outline: none;
+		text-decoration: underline;
 	}
 }
