--- a/src/scss/components/_calculator.scss
+++ b/src/scss/components/_calculator.scss
@@ -6,8 +6,20 @@
 		size: cover;
 	}
 
-	padding-top: 60px;
+	padding-top: 100px;
 	color: $_2;
+
+	@media (width <=1200px) {
+		padding-top: 80px;
+	}
+
+	@media (width <=900px) {
+		padding-top: 40px;
+	}
+
+	@media (width <=620px) {
+		padding-top: 20px;
+	}
 
 
 	&__invite {
@@ -16,6 +28,39 @@
 		font-weight: 300;
 		max-width: 480px;
 		margin-bottom: 80px;
+		letter-spacing: -0.03rem;
+
+		@media (width <=900px) {
+			font-size: 14px;
+			max-width: 325px;
+			letter-spacing: -0.025rem;
+		}
+
+		@media (width <=620px) {
+			font-size: 12px;
+			margin-bottom: 53px;
+		}
+	}
+}
+
+.container--calculator {
+	@media (width <=900px) {
+		padding-left: 36px;
+	}
+
+	@media (width <=620px) {
+		padding-left: 20px;
+	}
+}
+
+.calculator__wrapper {
+	@media (width <=900px) {
+		display: flex;
+		gap: 12px;
+	}
+
+	@media (width <=620px) {
+		flex-direction: column;
 	}
 }
 
@@ -25,20 +70,63 @@
 
 	backdrop-filter: blur(10px);
 	background: rgba(230, 205, 173, 0.3);
+
+	@media (width <=1200px) {
+		padding: 53px 60px 50px;
+	}
+
+	@media (width <=900px) {
+		border-radius: 12px 12px 0px 0px;
+		padding: 30px;
+		margin-top: -40px;
+	}
+
+	@media (width <=620px) {
+		max-width: fit-content;
+		align-self: center;
+		padding: 25px 25px 24px;
+	}
 }
 
 .price__container {
 	border-radius: 20px;
-	padding: 23px 38px 20px;
+	padding: 23px 20px 20px 38px;
 
 	background: rgba(33, 25, 25, 0.78);
 
 	display: flex;
 	gap: 39px;
+
+	@media (width <=1200px) {
+		gap: 5px;
+		padding: 24px 13px 20px 19px;
+	}
+
+	@media (width <=900px) {
+		border-radius: 10px;
+		flex-direction: column;
+		padding: 20px 17px 28px 37px;
+		gap: 38px;
+	}
+
+	@media (width <=620px) {
+		padding: 17px 25px 26px;
+		gap: 0;
+	}
 }
 
 .price__input-wrapper {
 	position: relative;
+
+	@media (width <=620px) {
+		&:not(:last-of-type) {
+			margin-bottom: 49px;
+		}
+
+		&:last-of-type {
+			margin-bottom: 41px;
+		}
+	}
 }
 
 .price__input {
@@ -46,6 +134,17 @@
 	width: 217px;
 	padding: 12px 26px 0 2px;
 	cursor: pointer;
+
+	@media (width <=1200px) {
+		width: 186px;
+	}
+
+	@media (width <=900px) {
+		padding: 0 8px;
+		width: 150px;
+	}
+
+
 
 	&:hover .price__arrow {
 		background-color: #fff;
@@ -65,13 +164,21 @@
 	}
 }
 
-.price__input--date {}
 
 .price__title {
 	font-size: 16px;
 	font-weight: 700;
 	line-height: 130%;
 	margin-bottom: 12px;
+
+	@media (width <=900px) {
+		font-size: 14px;
+		margin-bottom: 15px;
+	}
+
+	@media (width <=620px) {
+		font-size: 12px;
+	}
 }
 
 .price__placeholder {
@@ -80,30 +187,85 @@
 	font-size: 16px;
 	font-weight: 300;
 	line-height: 130%;
+
+	@media (width <=900px) {
+		font-size: 14px;
+	}
+
+	@media (width <=620px) {
+		font-size: 12px;
+	}
 }
 
 .price__arrow {
 	position: absolute;
-	right: 25px;
+	right: 20px;
 	border-radius: 50%;
 	padding: 6px 6px;
 	// width: 24px;
 	// height: 24px;
-	top: 35px;
+	top: 30px;
+
+	@media (width <=1200px) {
+		top: 29px;
+		right: 29px;
+	}
+
+	@media (width <=900px) {
+		top: 17px;
+		right: 9px;
+	}
+	@media (width <=620px) {
+		top: 4px;
+		right: 5px;
+	}
 }
 
 .price__placeholder--date {}
 
 .price__input--people {}
 
-.price__placeholder--people {}
+.price__placeholder--options {
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
 
 .price__input--options {}
 
 .price__button {
-	padding: 22px 48px 22px 56px;
+	padding: 22px 0 22px;
+	width: 219px;
 	font-size: 18px;
 	height: 67px;
+
+	@media (width <=1200px) {
+		width: 189px;
+
+		padding: 9px 0 28px;
+		height: 53px;
+		align-self: center;
+		margin-left: 19px;
+	}
+
+	@media (width <=900px) {
+		width: 173px;
+		height: 42px;
+		padding: 9px 0 13px;
+		align-self: flex-start;
+		font-size: 14px;
+		margin-left: 0;
+		border-radius: 5px;
+	}
+
+	@media (width <=620px) {
+		font-size: 12px;
+		width: 132px;
+		align-self: center;
+		height: 34px;
+	}
 }
 
 // !ПОПАП ДАТЫ
@@ -266,18 +428,32 @@
 		width: 16px;
 		height: 16px;
 
+
+
 		border: 1px solid rgb(48, 48, 48);
 		background: rgb(255, 255, 255);
 	}
 
 
-	&:hover {
-		color: $_3;
+	&:hover::before {
+		border-color: $_3;
 	}
 
 	&:focus-visible {
-		color: $_3;
 		outline: none;
-		text-decoration: underline;
+	}
+
+	&:focus-visible::before {
+		outline: none;
+		border-color: #C2900F;
+	}
+
+	&--checked::before {
+		background: {
+			image: url("./../../img/icons/mark-button.svg") !important;
+			repeat: no-repeat !important;
+			size: cover !important;
+			position: center !important;
+		}
 	}
 }
