--- a/src/scss/components/_travel.scss
+++ b/src/scss/components/_travel.scss
@@ -1,5 +1,17 @@
 .travel {
-	padding-bottom: 150px;
+	padding-bottom: 112px;
+
+	@media (width <=1200px) {
+		padding-bottom: 80px;
+	}
+
+	@media (width <=900px) {
+		padding-bottom: 92px;
+	}
+
+	@media (width <=620px) {
+		padding-bottom: 49px;
+	}
 
 	&__wrapper {
 		display: flex;
@@ -43,7 +55,8 @@
 
 	// 	transform: translateY(-24px);
 	// }
-	@media (width <= 600px) {
+	@media (width <=900px) {
+		align-items: flex-start;
 		flex-direction: column;
 	}
 
@@ -208,7 +221,7 @@
 	margin-bottom: 18px;
 
 	@media(width <=900px) {
-		margin-bottom: 25px;
+		margin-bottom: 19px;
 	}
 
 	@media(width <=600px) {
@@ -221,6 +234,10 @@
 	width: 30px;
 	height: 30px;
 	margin-left: 0;
+
+	@media(width <=900px) {
+		margin-right: 70px;
+	}
 
 	@media (width <=600px) {
 		width: 16px;
