--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,3 +6,6 @@
 @import './components/about';
 @import './components/travel';
 @import './components/calculator';
+@import './components/why';
+@import './components/album';
+@import './components/reserve';
