--- a/src/scss/components/_reserve.scss
+++ b/src/scss/components/_reserve.scss
@@ -1,3 +1,136 @@
-.choice-row{
+.reserve {
+	padding: 150px 0;
+}
+
+.container--reserve {
+	max-width: 980px;
+}
+
+.reserve__wrapper {
+	border-radius: 30px;
+	border: 1px solid $_4;
+	padding: 60px 100px;
+}
+
+.reserve__title {
+	font-family: Merriweather;
+	font-size: 34px;
+	font-weight: 400;
+	line-height: 150%;
+	text-align: center;
+	margin-bottom: 60px;
+}
+
+.form {
 	display: flex;
+	flex-direction: column;
+	gap: 30px;
+}
+
+.form__choice {
+	display: flex;
+	gap: 59px;
+
+	.select-wrapper {
+		border-radius: 12px;
+		border: 1px solid $_4;
+		padding: 12px 17px 12px 15px;
+		max-width: 221px;
+	}
+
+	.select {
+		width: 189px;
+	}
+
+	.select--date,
+	.select--options,
+	.select--people {
+		padding: unset;
+	}
+}
+
+.form__date-input,
+.form__people-input,
+.form__options-input {
+	display: none;
+}
+
+.form__input-wrapper {
+	position: relative;
+}
+
+.form__input-wrapper label {
+	position: absolute;
+	top: 12px;
+	left: 15px;
+
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 130%;
+}
+
+.form__name-input {
+	width: 100%;
+}
+
+.form__name-input,
+.form__mail-input,
+.form__tel-input {
+	padding: 45px 15px 33px;
+	height: 99px;
+	border-radius: 12px;
+	border: 1px solid $_4;
+
+	font-size: 16px;
+	font-weight: 300;
+	line-height: 130%;
+}
+
+.form__name-input::placeholder,
+.form__mail-input::placeholder,
+.form__tel-input::placeholder {
+	color: rgb(175, 175, 175);
+}
+
+.contacts-row {
+	display: flex;
+	gap: 60px;
+}
+
+.form__input-wrapper--mail,
+.form__input-wrapper--tel {
+	flex-basis: 50%;
+}
+
+.form__mail-input,
+.form__tel-input {
+	width: 100%;
+}
+
+.form__footer {
+	display: flex;
+	// justify-content: space-between;
+	gap: 60px;
+}
+
+.form__result {
+	flex-basis: calc(50% - 30px);
+}
+
+.form__details {
+	font-size: 18px;
+	font-weight: 300;
+	line-height: 150%;
+	margin-bottom: 10px;
+}
+
+.form__price {
+	font-size: 20px;
+	font-weight: 700;
+	line-height: 150%;
+}
+
+.form__button {
+	flex-basis: calc(50% - 30px);
+	padding: 24px 100px 25px 111px;
 }
