--- a/src/scss/components/_calculator.scss
+++ b/src/scss/components/_calculator.scss
@@ -96,10 +96,11 @@
 
 	display: flex;
 	gap: 39px;
-
+	
 	@media (width <=1200px) {
 		gap: 5px;
-		padding: 24px 13px 20px 19px;
+		padding: 23px 20px 20px 19px;
+		justify-content: space-between;
 	}
 
 	@media (width <=900px) {
@@ -258,7 +259,7 @@
 		padding: 9px 0 28px;
 		height: 53px;
 		align-self: center;
-		margin-left: 19px;
+		// margin-left: 19px;
 	}
 
 	@media (width <=900px) {
@@ -291,14 +292,18 @@
 	background: rgb(255, 255, 255);
 	width: max-content;
 
-z-index: 5;
+	z-index: 5;
 	position: absolute;
-	top: 123px;
+	top: 106px;
+
+	@media (width <=960px) {
+		top: 90px;
+	}
 }
 
 .popup--date {
 	width: 300px;
-	right: 0;
+	right: calc(50% - 150px);
 }
 
 .popup__title {
@@ -318,8 +323,11 @@ z-index: 5;
 	display: flex;
 	flex-direction: column;
 	gap: 11px;
-	padding: 9px 20px 16px 0;
+	padding: 9px 15px 16px 0;
 	border-right: 1px solid rgb(192, 192, 192);
+
+	box-sizing: content-box;
+	width: 127px;
 }
 
 .popup__month-item {
@@ -353,7 +361,8 @@ z-index: 5;
 	display: flex;
 	flex-direction: column;
 	gap: 25px;
-	padding-left: 20px;
+	text-align: center;
+	padding-left: 15px;
 }
 
 .popup__days-item {
@@ -382,7 +391,9 @@ z-index: 5;
 
 // ! ПОПАП КОЛИЧЕСТВО ЛЮДЕЙ
 .popup--people {
-	right: 102px;
+	// right: 102px;
+	right: calc(50% - 25px);
+
 	width: 50px;
 	height: 277px;
 }
@@ -416,6 +427,8 @@ z-index: 5;
 
 .popup--options {
 	right: 18px;
+	right: calc(50% - 105px);
+
 }
 
 .popup__title {}
