--- a/src/scss/components/_reserve.scss
+++ b/src/scss/components/_reserve.scss
@@ -1,12 +1,16 @@
 .reserve {
-	padding: 150px 0;
+	padding: 150px 0 146px;
 
 	@media (width <=1100px) {
 		padding: 120px 0;
 	}
 
 	@media (width <=900px) {
-		padding: 90px 0;
+		padding: 90px 0 102px;
+	}
+
+	@media (width <=670px) {
+		padding: 50px 0;
 	}
 }
 
@@ -19,6 +23,10 @@
 
 	@media (width <=900px) {
 		max-width: 700px;
+	}
+
+	@media (width <=670px) {
+		max-width: 100%;
 	}
 }
 
@@ -34,6 +42,11 @@
 	@media (width <=900px) {
 		padding: 40px 60px;
 		border-radius: 20px;
+	}
+
+	@media (width <=670px) {
+		padding: 20px 10px 17px;
+		border-radius: 10px;
 	}
 }
 
@@ -54,6 +67,11 @@
 		font-size: 20px;
 		margin-bottom: 40px;
 	}
+
+	@media (width <=670px) {
+		font-size: 16px;
+		margin-bottom: 23px;
+	}
 }
 
 .form {
@@ -61,8 +79,38 @@
 	flex-direction: column;
 	gap: 30px;
 
+	@media (width <=1200px) {
+		gap: 0;
+
+		&>:not(:last-child) {
+			margin-bottom: 29px;
+		}
+
+		&>:nth-child(3) {
+			margin-bottom: 31px;
+		}
+	}
+
 	@media (width <=900px) {
-		gap: 33px;
+		gap: 0;
+
+		&>:not(:last-child) {
+			margin-bottom: 32px;
+		}
+
+		&>:nth-child(3) {
+			margin-bottom: 23px;
+		}
+	}
+
+	@media (width <=670px) {
+		&>:not(:last-child) {
+			margin-bottom: 14px;
+		}
+
+		&>:nth-child(3) {
+			margin-bottom: 22px;
+		}
 	}
 }
 
@@ -74,11 +122,23 @@
 		gap: 35px;
 	}
 
+	@media (width <=670px) {
+		flex-direction: column;
+		padding: 0 45px;
+		gap: 15px;
+	}
+
 	.select-wrapper {
 		border-radius: 12px;
 		border: 1px solid $_4;
 		padding: 12px 17px 12px 15px;
 		flex-basis: 221px;
+
+		@media (width <=670px) {
+			flex-basis: auto;
+			margin-bottom: 0;
+			padding: 10px 17px 12px 15px;
+		}
 	}
 
 	.select {
@@ -93,11 +153,21 @@
 
 	.select .select-error {
 		bottom: -35px;
+		left: -15px;
+
+		@media (width <=900px) {
+			bottom: -30px;
+		}
 	}
 
 	.select__arrow {
 		right: -4px;
 		top: 16px;
+
+		@media (width <=670px) {
+			right: -9px;
+			top: 5px;
+		}
 	}
 }
 
@@ -105,6 +175,10 @@
 	position: absolute;
 	font-size: 16px;
 	width: max-content;
+
+	@media (width <=900px) {
+		font-size: 12px;
+	}
 }
 
 .form__date-input,
@@ -125,6 +199,12 @@
 	font-size: 16px;
 	font-weight: 700;
 	line-height: 130%;
+
+	@media (width <=670px) {
+		font-size: 12px;
+		top: 10px;
+		left: 9px;
+	}
 }
 
 .form__name-input {
@@ -143,10 +223,32 @@
 	font-weight: 300;
 	line-height: 130%;
 
+	&:hover {
+		border-color: $_3;
+	}
+
+	&:focus {
+		border-color: $_3;
+		// border-color: #C2900F;
+		outline: none;
+	}
+
+	&:active {
+		border-color: $_3;
+		outline: none;
+	}
+
+
 	@media (width <=900px) {
 		height: 83px;
 		padding: 45px 15px 21px;
 		border-radius: 7px;
+	}
+
+	@media (width <=670px) {
+		font-size: 12px;
+		height: 71px;
+		padding: 34px 8px 8px;
 	}
 }
 
@@ -162,6 +264,11 @@
 
 	@media (width <=900px) {
 		gap: 20px;
+	}
+
+	@media (width <=670px) {
+		flex-direction: column;
+		gap: 15px;
 	}
 }
 
@@ -179,6 +286,11 @@
 	display: flex;
 	justify-content: space-between;
 	gap: 60px;
+
+	@media (width <=670px) {
+		flex-direction: column;
+		gap: 24px;
+	}
 }
 
 .form__result {
@@ -192,12 +304,26 @@
 	font-weight: 300;
 	line-height: 150%;
 	margin-bottom: 10px;
+
+	@media (width <=900px) {
+		font-size: 14px;
+		margin-bottom: 17px;
+	}
+
+	@media (width <=670px) {
+		font-size: 12px;
+		margin-bottom: 13px;
+	}
 }
 
 .form__price {
 	font-size: 20px;
 	font-weight: 700;
 	line-height: 150%;
+
+	@media (width <=900px) {
+		font-size: 18px;
+	}
 }
 
 .form__button {
@@ -208,8 +334,26 @@
 		max-width: 298px;
 		padding: 18px 81px 18px 81px;
 		height: 63px;
-		margin-top: -5px;
+		transform: translateY(-4px);
 		letter-spacing: -0.032rem;
 		border-radius: 10px;
+	}
+
+	@media (width <=900px) {
+		max-width: 219px;
+		padding: 12px 57px;
+		font-size: 14px;
+		height: 45px;
+		margin-bottom: 7px;
+		border-radius: 6px;
+		align-self: flex-end;
+		transform: unset;
+	}
+
+	@media (width <=670px) {
+		align-self: center;
+		max-width: 152px;
+		padding: 8px 32px;
+		font-size: 12px;
 	}
 }
