--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -193,7 +193,7 @@
 		align-self: center;
 	}
 
-	outline-color: $opacity;
+	outline-color: $_opacity;
 
 	transition: text-decoration-color 0.3s ease-in,
 	outline-color 0.3s ease-in,
@@ -274,9 +274,9 @@
 
 
 	&__link {
-		text-decoration-color: $opacity;
+		text-decoration-color: $_opacity;
 		border-radius: 5px;
-		outline-color: $opacity;
+		outline-color: $_opacity;
 		transition: text-decoration-color 0.3s ease-in, outline-color 0.3s ease-in, color 0.3s ease-in;
 
 		@media(hover:hover) {
