--- a/src/scss/components/_reserve.scss
+++ b/src/scss/components/_reserve.scss
@@ -175,6 +175,7 @@
 	position: absolute;
 	font-size: 16px;
 	width: max-content;
+	font-weight: 700;
 
 	@media (width <=900px) {
 		font-size: 12px;
@@ -222,6 +223,7 @@
 	font-size: 16px;
 	font-weight: 300;
 	line-height: 130%;
+	transition: border-color 0.3s ease-in;
 
 	&:hover {
 		border-color: $_3;
