--- a/src/scss/components/_album.scss
+++ b/src/scss/components/_album.scss
@@ -51,7 +51,6 @@
 
 .next {
 	right: 0px;
-
 }
 
 
@@ -69,10 +68,7 @@
 	}
 }
 
-.prev:hover svg,
-.next:hover svg {
-	opacity: 1;
-}
+
 
 
 
@@ -96,6 +92,10 @@
 	right: 0;
 	opacity: 0;
 
+	@media (width <=12000px) {
+		right: 90px;
+	}
+
 	@media (width <=900px) {
 		right: 96px;
 	}
@@ -109,6 +109,10 @@
 	left: 0;
 	opacity: 1;
 
+
+	@media (width <=12000px) {
+		left: 90px;
+	}
 
 	@media (width <=900px) {
 		left: 96px;
@@ -132,26 +136,36 @@
 	transition: color 0.3s ease-in;
 }
 
-.prev svg:hover #arrow-prev {
-	transform: translateX(-10px);
-	color: $_1;
+@media (hover:hover) {
+
+	.prev:hover svg,
+	.next:hover svg {
+		opacity: 1;
+	}
+
+	.prev svg:hover #arrow-prev {
+		transform: translateX(-10px);
+		color: $_1;
+	}
+
+	.next svg:hover #arrow-next {
+		color: $_1;
+		transform: translateX(10px);
+	}
+
+	.prev svg:hover,
+	.next svg:hover {
+		background-color: white;
+		opacity: 1;
+	}
+
+	.prev svg:hover .slick-list,
+	.next svg:hover .slick-list {
+		padding: 0 10% 0 0;
+	}
 }
 
-.next svg:hover #arrow-next {
-	color: $_1;
-	transform: translateX(10px);
-}
 
-.prev svg:hover,
-.next svg:hover {
-	background-color: white;
-	opacity: 1;
-}
-
-.prev svg:hover .slick-list,
-.next svg:hover .slick-list {
-	padding: 0 10% 0 0;
-}
 
 .prev:focus-visible svg,
 .next:focus-visible svg {
