--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -6,7 +6,7 @@
 	background-repeat: no-repeat;
 
 	@media (width <=1200px) {
-		padding: 80px 0 40px;
+		padding: 80px 0 38px;
 	}
 
 	@media (width <=900px) {
@@ -78,7 +78,7 @@
 	font-size: 20px;
 	font-weight: 700;
 	line-height: 150%;
-
+	letter-spacing: -0.031rem;
 	margin-bottom: 20px;
 
 	@media (width <=900px) {
@@ -329,7 +329,7 @@
 	letter-spacing: -0.03rem;
 
 	@media (width <=1200px) {
-		margin-bottom: 0px;
+		margin-bottom: 2px;
 	}
 
 	@media (width <=900px) {
@@ -382,8 +382,10 @@
 		font-weight: 300;
 		line-height: 130%;
 
-		&:hover {
-			border-color: $_3;
+		@media (hover:hover) {
+			&:hover {
+				border-color: $_3;
+			}
 		}
 
 		&:focus {
