--- a/src/scss/components/_reserve.scss
+++ b/src/scss/components/_reserve.scss
@@ -36,7 +36,7 @@
 	padding: 60px 100px;
 
 	@media (width <=1100px) {
-		padding: 60px 80px 69px;
+		padding: 60px 80px 68px
 	}
 
 	@media (width <=900px) {
@@ -118,6 +118,12 @@
 	display: flex;
 	gap: 58px;
 
+	@media(width <=1100px) {
+		&> :nth-child(2) {
+			padding: 12px 17px 12px 9px;
+		}
+	}
+
 	@media (width <=900px) {
 		gap: 35px;
 	}
@@ -133,6 +139,18 @@
 		border: 1px solid $_4;
 		padding: 12px 17px 12px 15px;
 		flex-basis: 221px;
+
+		@media(width <=1100px) {
+			padding: 12px 17px 12px 13px;
+
+			&:nth-child(2) {
+				padding: 12px 17px 12px 9px;
+			}
+
+			&:nth-child(3) {
+				padding: 12px 17px 12px 5px;
+			}
+		}
 
 		@media (width <=670px) {
 			flex-basis: auto;
@@ -192,19 +210,35 @@
 	position: relative;
 }
 
+
+
 .form__input-wrapper label {
 	position: absolute;
-	top: 12px;
-	left: 15px;
+	top: 14px;
+	left: 14px;
 
 	font-size: 16px;
 	font-weight: 700;
 	line-height: 130%;
 
+	@media (width <=900px) {
+		top: 13px;
+		left: 14px;
+		font-size: 14px;
+	}
+
 	@media (width <=670px) {
 		font-size: 12px;
 		top: 10px;
 		left: 9px;
+	}
+}
+
+.form__input-wrapper--tel label {
+	left: 25px;
+
+	@media (width <=900px) {
+		left: 20px;
 	}
 }
 
@@ -225,8 +259,10 @@
 	line-height: 130%;
 	transition: border-color 0.3s ease-in;
 
-	&:hover {
-		border-color: $_3;
+	@media (hover:hover) {
+		&:hover {
+			border-color: $_3;
+		}
 	}
 
 	&:focus {
