--- a/src/scss/components/_calculator.scss
+++ b/src/scss/components/_calculator.scss
@@ -1,6 +1,8 @@
 .calculator {
 	background: {
-		image: url("./../../img/calculator-bg.jpg");
+		image: image-set(url('./../../img/calculator-bg.avif') 1x type("image/avif"),
+				url('./../../img/calculator-bg.webp') 1x type("image/webp"),
+				url('./../../img/calculator-bg.jpg') 1x);
 		repeat: no-repeat;
 		position: center;
 		size: cover;
@@ -17,7 +19,7 @@
 		padding-top: 40px;
 	}
 
-	@media (width <=620px) {
+	@media (width <=670px) {
 		padding-top: 20px;
 	}
 
@@ -36,7 +38,7 @@
 			letter-spacing: -0.025rem;
 		}
 
-		@media (width <=620px) {
+		@media (width <=670px) {
 			font-size: 12px;
 			margin-bottom: 53px;
 		}
@@ -48,7 +50,7 @@
 		padding-left: 36px;
 	}
 
-	@media (width <=620px) {
+	@media (width <=670px) {
 		padding-left: 20px;
 	}
 }
@@ -59,7 +61,7 @@
 		gap: 14px;
 	}
 
-	@media (width <=620px) {
+	@media (width <=670px) {
 		flex-direction: column;
 	}
 }
@@ -82,7 +84,7 @@
 		margin-top: -40px;
 	}
 
-	@media (width <=620px) {
+	@media (width <=670px) {
 		max-width: 250px;
 		// max-width: fit-content;
 		align-self: center;
@@ -110,7 +112,7 @@
 		}
 
 		&> :nth-child(3) {
-			margin-right: 24px;
+			margin-right: clamp(10px, 2.34375vw, 24px);
 		}
 	}
 
@@ -121,7 +123,7 @@
 		gap: 38px;
 	}
 
-	@media (width <=620px) {
+	@media (width <=670px) {
 		padding: 17px 25px 26px;
 		gap: 0;
 	}
@@ -130,7 +132,7 @@
 .select-wrapper {
 	position: relative;
 
-	@media (width <=620px) {
+	@media (width <=670px) {
 		&:not(:last-of-type) {
 			margin-bottom: 49px;
 		}
@@ -155,7 +157,7 @@
 		padding: 9px 26px 0 14px;
 	}
 
-	@media (width <=600px) {
+	@media (width <=670px) {
 		padding: 0 8px;
 		width: 150px;
 	}
@@ -197,7 +199,7 @@
 		margin-bottom: 15px;
 	}
 
-	@media (width <=620px) {
+	@media (width <=670px) {
 		font-size: 12px;
 	}
 }
@@ -213,7 +215,7 @@
 		font-size: 14px;
 	}
 
-	@media (width <=620px) {
+	@media (width <=670px) {
 		font-size: 12px;
 	}
 }
@@ -238,7 +240,7 @@
 		right: 9px;
 	}
 
-	@media (width <=620px) {
+	@media (width <=670px) {
 		top: 4px;
 		right: 5px;
 	}
@@ -272,6 +274,7 @@
 	transform: translate(-3px, 6px);
 
 	@media (width <=1200px) {
+		font-size: clamp(14px, 1.7578125vw, 18px);
 		width: 189px;
 		transform: translate(0, 0);
 		padding: 9px 0 28px;
@@ -290,7 +293,7 @@
 		border-radius: 5px;
 	}
 
-	@media (width <=620px) {
+	@media (width <=670px) {
 		font-size: 12px;
 		width: 132px;
 		align-self: center;
