--- a/src/scss/components/_global.scss
+++ b/src/scss/components/_global.scss
@@ -7,7 +7,7 @@ body {
 	overflow-x: hidden;
 	min-width: 320px;
 	min-height: 100vh;
-	font-family: Nunito; //, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: Nunito, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	text-rendering: optimizeLegibility;
@@ -95,8 +95,8 @@ iframe {
 	padding: 0 25px;
 
 	@media(max-width:1200px) {
-	// padding: 0 42px;
-	max-width: 940px;
+		// padding: 0 42px;
+		max-width: 940px;
 	}
 
 	@media (max-width:900px) {
