--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -1,4 +1,10 @@
 .about {
+	picture {
+		width: fit-content;
+		background-image: url('./../../img/holder.webp'); /* путь к изображению-заглушке */
+    background-size: cover;
+    background-position: center;
+	}
 	padding-bottom: 18px;
 
 	@media (width <=1200px) {
@@ -238,9 +244,9 @@
 	min-width: 320px;
 	min-height: 100%;
 
-	img {
+	// img {
 		margin: 0 auto;
-	}
+	// }
 }
 
 .slick-dots {
